--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-font-size-changer": "^0.2.0",
     "react-player": "^2.11.2",
