--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-font-size-changer": "^0.2.0",
     "react-player": "^2.11.2",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "sweetalert2": "^11.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
