--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "i18next": "^22.4.10",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-font-size-changer": "^0.2.0",
+    "react-i18next": "^12.2.0",
     "react-player": "^2.11.2",
     "react-router-dom": "^6.8.0",
     "sweetalert2": "^11.7.2"
