--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-font-size-changer": "^0.2.0",
     "react-i18next": "^12.2.0",
     "react-player": "^2.11.2",
+    "react-router": "^6.8.2",
     "react-router-dom": "^6.8.0",
     "sweetalert2": "^11.7.2"
   },
